# Anki-Rag-workflow

./: .gitignore  README.md  books.yaml  config.toml  pyproject.toml
cli/: check.py  check_markers.py  commit.py  propose.py  reject.py
commit/: anki.py  apply.py
docs/: project_spec.md
rag/: config.py  embedder.py  ingest.py  query.py  store.py
reason/: check.py  crosscheck.py  emit.py  llm.py
sync/: anki_source.py  config.py  index.py  state.py  vault.py
tests/: books.test.toml  books.test.yaml  make_sample_pdf.py  test_anki_backup.py  test_anki_source.py  test_app_config.py  test_card_change_matching.py  test_check_cache.py  test_check_injection.py  test_commit_apply.py  test_ingest.py  test_propose_gate.py  test_rag_config.py  test_rag_query_cache.py  test_vector_store.py
